@@ -9,10 +9,11 @@ Added / Fixed / changed for 2.0.8
   - adds random sorting to links module
   - enhances category management by removing global categories and grouping categories by module type
   - enhances comment management by adding a 'manage site comments' command to exponent menu
+  - enhances comment, tag, & category management with bulk module item processing
   - adds additional views to photoalbum
-    -- new tabbed and accordion views
+    -- new tabbed and accordion views just like filedownloads & portfolio
     -- view category/gallery/group album pulling up individual group/gallery
-  - adds group view to filedownloads
+  - adds group (category) viewing to filedownloads
   - plus many other tweaks, fixes, and features
 
 Added / Fixed / changed for 2.0.7
